:lipstick: Fix slogan margins on mobile

--- a/src/routes/home/style.styl
+++ b/src/routes/home/style.styl
@@ -53,8 +53,8 @@
   align-items: center
   justify-content: center
   +mobile()
-    margin-top: pxToRem(25)
-    margin-bottom: pxToRem(100)
+    margin-top: pxToRem(60)
+    margin-bottom: pxToRem(60)
 
 .forecast
   margin-top: auto
